# cake3d

./: .gitignore  CMakeLists.txt  Info.plist  README  README.md  cake3d.sln  compile_sdl.sh  gafmc.desktop
Assets/: PhongFragment.glsl  PhongVertex.glsl  PostProcessFragment.glsl  PostProcessVertex.glsl  bullet.blend  bullet.blend1  ceil.xcf  cube.blend  pillar.blend  pillar.blend1  spike0.blend  spike1.blend2  spike2.blend1  spike2.blend2  table.blend1  test_anim2.blend1  test_anim3.blend  wall.xcf
dev_assets/: cake.blend  cake.blend1  cake.blend2  cake.xcf  concrete_modular_ceiling001a_normal.xcf  spike1.blend  spike1.blend1  spike1.xcf  spike2.blend  table.blend  test_anim.blend  test_anim.blend1  test_anim.blend2  test_anim2.blend  wall-destroy.xcf
shared/: CMakeLists.txt
shared/SDL2-2.0.4/: Makefile  Makefile.rules  config.status  libtool  sdl2-config  sdl2-config.cmake  sdl2.pc
shared/SDL2-2.0.4/VisualC/SDL/: SDL_vs2015.vcxproj
shared/SDL2-2.0.4/VisualC/SDLmain/: SDLmain_vs2015.vcxproj
shared/SDL2-2.0.4/include/: SDL_config.h
shared/SDL2_mixer-2.0.1/: Makefile  SDL2_mixer.pc  config.status  libtool
shared/SDL2_mixer-2.0.1/VisualC/: SDL_mixer_vs2015.vcxproj
shared/SDL2_mixer-2.0.1/VisualC/native_midi/: native_midi_vs2015.vcxproj
shared/SDL2_mixer-2.0.1/VisualC/timidity/: timidity_vs2015.vcxproj
shared/gl3w/: CMakeLists.txt  gl3w.vcxproj  gl3w.vcxproj.filters
shared/imgui-1.47/: CMakeLists.txt  imgui.vcxproj  imgui.vcxproj.filters
shared/imgui-1.47/examples/: CMakeLists.txt
shared/imgui-1.47/examples/sdl_opengl3_example/: CMakeLists.txt  imgui_impl_sdl_gl3.cpp
src/: Bullet.cpp  Bullet.hpp  CMakeLists.txt  Enemy.cpp  Enemy.hpp  Exception.hpp  GeometryNode.cpp  GeometryNode.hpp  GlErrorCheck.cpp  GlErrorCheck.hpp  Keyframe.cpp  Keyframe.hpp  Level.cpp  Level.hpp  Material.cpp  Material.hpp  MathUtils.hpp  Model.cpp  Model.hpp  ModelCache.cpp  ModelCache.hpp  ObjFileDecoder.cpp  ObjFileDecoder.hpp  OpenGLImport.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Player.cpp  Player.hpp  PostProcess.cpp  PostProcess.hpp  SceneNode.cpp  SceneNode.hpp  Shader.cpp  Shader.hpp  SoundCache.cpp  SoundCache.hpp  Texture.cpp  Texture.hpp  TextureCache.cpp  TextureCache.hpp  (+4 more)
